<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SandtoFirebase"
    tools:showIn="@layout/activity_sandto_firebase">

    <RelativeLayout
        android:layout_width="371dp"
        android:layout_height="586dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="20dp">


        <TextView
            android:id="@+id/Textfiad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="กรอกข้อมูลของท่าน"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/AddNameBox"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Textfiad"
            android:layout_alignStart="@+id/Textfiad"
            android:layout_alignLeft="@+id/Textfiad"
            android:layout_marginStart="-71dp"
            android:layout_marginLeft="-71dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/Addname"
            android:inputType="textPersonName"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AddNameBox"
            android:layout_alignStart="@+id/AddNameBox"
            android:layout_alignLeft="@+id/AddNameBox"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="24dp"
            android:text="@string/CLASS"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="39dp"
            android:layout_marginRight="39dp"
            android:checked="true"
            android:text="@string/Pee1"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameBox"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="-35dp"
            android:layout_marginRight="-35dp"
            android:layout_marginBottom="-48dp"
            android:text="@string/Pee2"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AddNameBox"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="-108dp"
            android:layout_marginRight="-108dp"
            android:text="@string/Pee3"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AddNameBox"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="-185dp"
            android:layout_marginRight="-185dp"
            android:text="@string/Pee4"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/AddScoolBox"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AddNameBox"
            android:layout_alignStart="@+id/radio8"
            android:layout_alignLeft="@+id/radio8"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="130dp"
            android:ems="10"
            android:hint="@string/addScool"
            android:inputType="textPersonName"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AddNameBox"
            android:layout_alignStart="@+id/AddScoolBox"
            android:layout_alignLeft="@+id/AddScoolBox"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="195dp"
            android:text="@string/Bolld"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_marginTop="194dp"
            android:layout_marginEnd="39dp"
            android:layout_marginRight="39dp"
            android:checked="true"
            android:text="@string/addBloodA"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameBox"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_marginTop="82dp"
            android:layout_marginEnd="-32dp"
            android:layout_marginRight="-32dp"
            android:layout_marginBottom="-225dp"
            android:text="@string/addBloodB"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/radio14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AddNameBox"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_marginTop="247dp"
            android:layout_marginEnd="-105dp"
            android:layout_marginRight="-105dp"
            android:text="@string/addBloodO"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/AddNameBox"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3"
            android:layout_marginTop="247dp"
            android:layout_marginEnd="-179dp"
            android:layout_marginRight="-179dp"
            android:text="@string/addBloodAB"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="155dp"
            android:layout_height="140dp"
            android:layout_below="@+id/AddScoolBox"
            android:layout_alignEnd="@+id/radio15"
            android:layout_alignRight="@+id/radio15"
            android:layout_marginTop="111dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            app:srcCompat="@drawable/mew" />

        <Button
            android:id="@+id/SandButton"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_below="@+id/imageView2"
            android:layout_alignStart="@+id/radio12"
            android:layout_alignLeft="@+id/radio12"
            android:layout_marginStart="-28dp"
            android:layout_marginLeft="-28dp"
            android:layout_marginTop="0dp"
            android:text="@string/SandBox"
            android:textSize="22sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>