<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StudentActivity"
    tools:showIn="@layout/activity_student">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="585dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="12dp">

        <Spinner
            android:id="@+id/StudentList3"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/infoPic3"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/StudentList3"
            android:layout_alignEnd="@+id/StudentList3"
            android:layout_alignRight="@+id/StudentList3"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            app:srcCompat="@drawable/aey" />

        <TextView
            android:id="@+id/infoSname3"
            android:layout_width="151dp"
            android:layout_height="40dp"
            android:layout_below="@+id/StudentList3"
            android:layout_alignStart="@+id/StudentList3"
            android:layout_alignLeft="@+id/StudentList3"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_toStartOf="@+id/infoPic3"
            android:layout_toLeftOf="@+id/infoPic3"
            android:text="@string/SSname"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/infoAge3"
            android:layout_width="161dp"
            android:layout_height="77dp"
            android:layout_below="@+id/infoSname3"
            android:layout_alignStart="@+id/StudentList3"
            android:layout_alignLeft="@+id/StudentList3"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@+id/infoPic3"
            android:layout_toLeftOf="@+id/infoPic3"
            android:text="@string/Age"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/infoScool3"
            android:layout_width="166dp"
            android:layout_height="87dp"
            android:layout_below="@+id/infoAge3"
            android:layout_alignStart="@+id/StudentList3"
            android:layout_alignLeft="@+id/StudentList3"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:layout_toStartOf="@+id/infoPic3"
            android:layout_toLeftOf="@+id/infoPic3"
            android:text="@string/Scool"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/infoBlood"
            android:layout_width="150dp"
            android:layout_height="51dp"
            android:layout_below="@+id/infoAge3"
            android:layout_alignStart="@+id/infoScool3"
            android:layout_alignLeft="@+id/infoScool3"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_toStartOf="@+id/infoPic3"
            android:layout_toLeftOf="@+id/infoPic3"
            android:text="@string/Blood"
            android:textSize="20sp" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>